[package]
name = "zw-fast-quantile"
version = "0.1.0"
repository = "https://github.com/MnO2/zw-fast-quantile"
license = "Apache-2.0"
description = "Zhang-Wang fast quantile algorithm in Rust"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["quantile", "statistics"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
