[package]
name = "zw-fast-quantile"
version = "0.2.3"
repository = "https://github.com/MnO2/zw-fast-quantile"
license = "Apache-2.0"
description = "Zhang-Wang fast quantile algorithm in Rust"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["quantile", "statistics"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
quantiles = "0.7.1"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
ordered-float = "2.8.0"
stats_alloc = "0.1.8"

[[bench]]
name = "zw_benchmark"
harness = false
path = "./benches/zw_benchmark.rs"
required-features = []
